# apykuma

./: .cruft.json  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: deploy-pypi.yml  test.yml
apykuma/: __init__.py
docs/: conf.py  index.rst
docs/_autoapi_templates/python/: data.rst
src/: __init__.py  __main__.py  config.py  utils.py
tests/: test_commit_and_push.py
