[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "apykuma"
description = "Small library to notify Uptime Kuma that the service is up"
version = "0.1.0"
license = "MIT"
authors = []
readme = "README.md"
repository = "https://github.com/PerchunPak/apykuma"
packages = [ { include = "src" } ]


[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"

omegaconf = "~2.3"
loguru = "~0.7"
sentry-sdk = "~1.35"


[tool.poetry.group.make.dependencies]
black = "~23"
isort = "~5.12"
pycln = "~2.4"
cruft = "~2.15"
lice = "~0.6"  # for generating template

pre-commit = "~3.5"


[tool.poetry.group.typing.dependencies]
mypy = "~1.7"


[tool.poetry.group.tests.dependencies]
pytest = "~7.4"
pytest-cov = "~4.1"
pytest-mock = "~3.12"
pytest-randomly = "~3.15"
Faker = "~20.1"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
requests = "~2.31"
GitPython = "~3.1"


[tool.black]
line-length = 120
target-version = ['py38']
